# Himalaya-prediction-market-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: main.rs
crates/prediction-core/: Cargo.toml
crates/prediction-core/src/: lib.rs
